--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slider",
-  "homepage": "https://Hareram-Singh.github.io/E-commerce-project",
+  "homepage": "https://Hareram-Singh.github.io/commerce",
   "private": true,
   "version": "0.0.0",
   "type": "module",
